Finaliza a base do portfolio

--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
             <li>Addicted to yerba mate</li>
             <li>Dedicated gamer on my spare time</li>
         </ul>
+        <center><img src="frogguitar.gif" alt="mylittlefrog" width="350px"></center>
     </body>
 </html>
