--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h1>Eduardo Sequeira</h1>
         <img src="minhafoto.jpeg" alt="foto-eduardo" width="200px">
         <h5>Esse sou eu, logo depois de finalizar meu portfólio!</h5>
+        <br>
+        <h2>Conteúdos</h2>
         </center>
             
     <hr>
@@ -54,6 +56,6 @@
             <li>Addicted to yerba mate</li>
             <li>Dedicated gamer on my spare time</li>
         </ul>
-        <center><img src="frogguitar.gif" alt="mylittlefrog" width="350px"></center>
+        <center><img src="frog-music.gif" alt="mylittlefrog" width="350px"></center>
     </body>
 </html>
