--- a/index.html
+++ b/index.html
@@ -8,54 +8,70 @@
     </head>
     <body>
         <center>
-        <h1>Eduardo Sequeira</h1>
-        <img src="minhafoto.jpeg" alt="foto-eduardo" width="200px">
-        <h5>Esse sou eu, logo depois de finalizar meu portfólio!</h5>
-        <br>
-        <h2>Conteúdos</h2>
+            <h1>Eduardo Sequeira</h1>
+            <img src="minhafoto.jpeg" alt="foto-eduardo" width="200px">
+            <h5>Esse sou eu, logo depois de finalizar meu portfólio!</h5>
+            <br>
+            <h2>Content</h2>
+            <ol>
+                <a href="#info"><li>Info</li></a>
+                <a href="#moreAboutMe"><li>More about me</li></a>
+                <a href="#capabilities"><li>Capabilities</li></a>
+                <a href="#hardSkills"><li>Hard Skills</li></a>
+                <a href="#trivia"><li>Trivia</li></a>
+            </ol>
         </center>
             
     <hr>
-        <h2>Info</h2>
-    <p>
-        Born in January 1st of 2001
+        <div id = "info">
+            <h2>1. Info</h2>
+        </div>
+        <p>
+            Born in January 1st of 2001
+        <br>
+            Resident of Rio de Janeiro/RJ - Brazil
+        </p>
     <br>
-        Resident of Rio de Janeiro/RJ - Brazil
-    </p>
+        <div id = "moreAboutMe">
+            <h2>2. More about me</h2>
+        <p> 
+            I'm a student at <a href="https://www.betrybe.com/" target="_blank"><strong><em>Trybe Course</em></strong></a>
     <br>
-        <h2>More about me</h2>
-    <p> 
-        I'm a student at <a href="https://www.betrybe.com/" target="_blank"><strong><em>Trybe Course</em></strong></a>
-    <br>
-        I've came from a not-that-long journey, started producing music artists
-        at 15 and now i'm rediscovering myself in front of a computer, really excited 
-        to meet new people, show my skills and get to know more about this world<br>
-        If you want to know more about me, just click <a href="https://github.com/EdSequeira" target= "_blank"><strong><em>here</em></strong></a>
-    </p>
+            I've came from a not-that-long journey, started producing music artists
+            at 15 and now i'm rediscovering myself in front of a computer, really excited 
+            to meet new people, show my skills and get to know more about this world<br>
+            If you want to know more about me, just click <a href="https://github.com/EdSequeira" target= "_blank"><strong><em>here</em></strong></a>
+        </p>
     <hr>
-        <h2>Capabilities</h2>
-            <ul>
-            <li>English and Portuguese speaker</li>
-            <li>Really proud of my coding</li>
-            <li>I'm a fast learner</li>
-            <li>Making a good burrito</li>
+        <div id = "capabilities">
+            <h2>3. Capabilities</h2>
+                <ul>
+                <li>English and Portuguese speaker</li>
+                <li>Really proud of my coding</li>
+                <li>I'm a fast learner</li>
+                <li>Making a good burrito</li>
+        </div>
 
         </ul>
     <br>
-        <h2>Hard Skills</h2>
+        <div id = "hardSkills">
+            <h2>4. Hard Skills</h2>
         <ul>
-            <li>html</li>
+            <li>HTML5</li>
             <li>JavaScript</li>
             <li>CSS</li>
+        </div>
         </ul>
     <hr>
-        <h2>Trivia</h2>
-        <ul>
-            <li>Frogs are my favorite animals</li>
-            <li>I'm a sound enthusiast, specially <a href="https://www.feedspot.com/infiniterss.php?_src=feed_title&followfeedid=1300295&q=site:http%3A%2F%2Ffeeds.feedburner.com%2Fprogarchives%2Freviews" targer="_blank"><strong><em>progressive music and experimental</em></strong></a></li>
-            <li>Addicted to yerba mate</li>
-            <li>Dedicated gamer on my spare time</li>
-        </ul>
+        <div id = "trivia">
+            <h2>5. Trivia</h2>
+            <ul>
+                <li>Frogs are my favorite animals</li>
+                <li>I'm a sound enthusiast, specially <a href="https://www.feedspot.com/infiniterss.php?_src=feed_title&followfeedid=1300295&q=site:http%3A%2F%2Ffeeds.feedburner.com%2Fprogarchives%2Freviews" target="_blank"><strong><em>progressive music and experimental</em></strong></a></li>
+                <li>Addicted to yerba mate</li>
+                <li>Dedicated gamer on my spare time</li>
+            </ul>
+        </div>
         <center><img src="frog-music.gif" alt="mylittlefrog" width="350px"></center>
     </body>
 </html>
